bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: ';' expected but 'else' found.
else if ( estSurMessage(L) )
^BDR:7: error: ';' expected but 'else' found.
else if ( estSurMessage(I) )
^BDR:10: error: ';' expected but 'else' found.
else if ( estSurMessage(A) )
^BDR:12: error: ';' expected but 'else' found.
else if ( estSurMessage(B) )
^BDR:14: error: ';' expected but 'else' found.
else if ( estSurMessage(C) )
^BDR:16: error: ';' expected but 'else' found.
else if ( estSurMessage(Z) )
^BDR:18: error: ';' expected but 'else' found.
else if ( estSurMessage(Y) )
^BDR:20: error: ';' expected but 'else' found.
else if ( estSurMessage(X) )
^