bdr.BDR.scala.code
if ( estSurMessage(R) )
		droite()
		avance()
else if ( estSurMessage(L) )
		gauche()
		avance()
else if ( estSurMessage(I) )
		droite(2)
		avance()
else if ( estSurMessage(A) )
		avance()
else if ( estSurMessage(B) )
		avance(2)
else if ( estSurMessage(C) )
		avance(3)
else if ( estSurMessage(Z) )
		recule()
else if ( estSurMessage(Y) )
		recule(2)
else if ( estSurMessage(X) )
		recule(3)